fixup of warnings and shuffled around some deliverables